--- a/src/assets/scss/custom-style/_buttons.scss
+++ b/src/assets/scss/custom-style/_buttons.scss
@@ -37,7 +37,7 @@
   font-weight: 500;
 
   &:hover {
-    background: var(--color-primary-dark);
+    background: var(--color-primary-light);
     box-shadow: 0px 2px 8px  alpha(var(--color-secondary), 0.2);
   }
 
@@ -54,6 +54,8 @@
   font-weight: 500;
 
   &:hover {
+    background: var(--color-quaternary-light);
+    color: var(--color-black);
     box-shadow: var(--shadow-xs);
   }
 }
@@ -83,7 +85,7 @@
 }
 
 .btn--md {
-  padding: 1rem var(--space-lg);
+  padding: 1rem var(--space-md);
   font-size: 21px;
 }
 
