--- a/src/assets/scss/custom-style/_typography.scss
+++ b/src/assets/scss/custom-style/_typography.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;600;800&display=swap');
+
 :root {
   // font family
   --font-primary: 'Nunito', sans-serif;
@@ -6,11 +8,11 @@
   // font size
   --text-base-size: 1em; // body font-size
   --text-scale-ratio: 1.2; // multiplier used to generate the type scale values 👇
-  
+
   // line-height
   --body-line-height: 1.5;
   --heading-line-height: 1.2;
-  
+
   // capital letters - used in combo with the lhCrop mixin
   --font-primary-capital-letter: 1;
   --font-secondary-capital-letter: 1;
@@ -46,7 +48,7 @@ body {
 
 h1, h2, h3, h4 {
   font-family: var(--font-primary);
-  --heading-font-weight: 700;
+  --heading-font-weight: 800;
 }
 
 // font family
