--- a/src/assets/scss/components/_1_main-header.scss
+++ b/src/assets/scss/components/_1_main-header.scss
@@ -609,7 +609,7 @@ Usage: codyhouse.co/license
 
   &:hover,
   &[aria-current="page"] {
-    color: var(--color-primary);
+    color: var(--color-secondary-lighter);
   }
 }
 
