--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -34,3 +34,4 @@
 @import "components/1_how-it-works-v2";
 @import "components/1_revealing-section";
 @import "components/1_sticky-hero";
+@import "components/1_banner";
