--- a/src/assets/scss/components/_1_how-it-works.scss
+++ b/src/assets/scss/components/_1_how-it-works.scss
@@ -44,25 +44,25 @@ Usage: codyhouse.co/license
 .hiw-list__item::before {
   top: calc(var(--hiw-counter-size) + var(--hiw-line-stroke-width));
   height: calc(100% - var(--hiw-counter-size) - var(--hiw-line-stroke-width));
-  border-bottom: var(--hiw-line-stroke-width) dashed hsla(var(--color-primary-h), var(--color-primary-s), var(--color-primary-l), 0.25);
+  border-bottom: var(--hiw-line-stroke-width) dashed hsla(var(--color-secondary-h), var(--color-secondary-s), var(--color-secondary-l), 0.25);
 }
 .hiw-list__item::after {
   top: calc(100% - var(--hiw-line-stroke-width));
   height: calc(var(--hiw-items-gap-y)/2);
-  border-top: var(--hiw-line-stroke-width) dashed hsla(var(--color-primary-h), var(--color-primary-s), var(--color-primary-l), 0.25);
+  border-top: var(--hiw-line-stroke-width) dashed hsla(var(--color-secondary-h), var(--color-secondary-s), var(--color-secondary-l), 0.25);
 }
 .hiw-list__item:nth-child(2n+1) {
   padding-right: calc(var(--hiw-counter-size)/2);
 }
 .hiw-list__item:nth-child(2n+1)::before {
   left: calc(var(--hiw-counter-size)/2 - var(--hiw-line-stroke-width)/2);
-  border-left: var(--hiw-line-stroke-width) dashed hsla(var(--color-primary-h), var(--color-primary-s), var(--color-primary-l), 0.25);
+  border-left: var(--hiw-line-stroke-width) dashed hsla(var(--color-secondary-h), var(--color-secondary-s), var(--color-secondary-l), 0.25);
   border-bottom-left-radius: var(--hiw-line-border-radius);
 }
 .hiw-list__item:nth-child(2n+1)::after {
   left: 50%;
   border-top-right-radius: var(--hiw-line-border-radius);
-  border-right: var(--hiw-line-stroke-width) dashed hsla(var(--color-primary-h), var(--color-primary-s), var(--color-primary-l), 0.25);
+  border-right: var(--hiw-line-stroke-width) dashed hsla(var(--color-secondary-h), var(--color-secondary-s), var(--color-secondary-l), 0.25);
 }
 .hiw-list__item:nth-child(2n) {
   padding-left: calc(var(--hiw-counter-size)/2);
@@ -71,14 +71,14 @@ Usage: codyhouse.co/license
   flex-direction: row-reverse;
 }
 .hiw-list__item:nth-child(2n)::before {
-  border-right: var(--hiw-line-stroke-width) dashed hsla(var(--color-primary-h), var(--color-primary-s), var(--color-primary-l), 0.25);
+  border-right: var(--hiw-line-stroke-width) dashed hsla(var(--color-secondary-h), var(--color-secondary-s), var(--color-secondary-l), 0.25);
   right: calc(var(--hiw-counter-size)/2 - var(--hiw-line-stroke-width)/2);
   border-bottom-right-radius: var(--hiw-line-border-radius);
 }
 .hiw-list__item:nth-child(2n)::after {
   right: 50%;
   border-top-left-radius: var(--hiw-line-border-radius);
-  border-left: var(--hiw-line-stroke-width) dashed hsla(var(--color-primary-h), var(--color-primary-s), var(--color-primary-l), 0.25);
+  border-left: var(--hiw-line-stroke-width) dashed hsla(var(--color-secondary-h), var(--color-secondary-s), var(--color-secondary-l), 0.25);
 }
 .hiw-list__item:last-child::before, .hiw-list__item:last-child::after {
   display: none;
@@ -97,8 +97,8 @@ Usage: codyhouse.co/license
   display: flex;
   justify-content: center;
   align-items: center;
-  border: var(--hiw-line-stroke-width) solid hsla(var(--color-primary-h), var(--color-primary-s), var(--color-primary-l), 0.25);
-  color: var(--color-primary);
+  border: var(--hiw-line-stroke-width) solid hsla(var(--color-secondary-h), var(--color-secondary-s), var(--color-secondary-l), 0.25);
+  color: var(--color-secondary);
   font-size: var(--hiw-counter-font-size);
 }
 .hiw-list__counter::before {
