--- a/src/assets/scss/_custom-style.scss
+++ b/src/assets/scss/_custom-style.scss
@@ -191,3 +191,7 @@ html:not(.js) .select .icon {
   /* hide icon if JS = disabled */
   display: none;
 }
+
+.clickHover:hover {
+  background-color: var(--color-primary-light) !important;
+}
