--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -325,7 +325,7 @@
 .white-text {
 	font-size: 30px;
 	line-height: 36px;
-	font-weight: 600;
+	// font-weight: 600;
 
 	strong {
 		font-weight: 600;
