blog fix component

--- a/src/assets/scss/_custom-style.scss
+++ b/src/assets/scss/_custom-style.scss
@@ -195,3 +195,7 @@ html:not(.js) .select .icon {
 .clickHover:hover {
   background-color: var(--color-primary-light) !important;
 }
+
+.margin-left-important {
+  margin: 0 12px 0 0 !important;
+}
