--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -47,7 +47,7 @@
   // --------------------------------
 
   a, .link {
-    color: var(--color-primary, hsl(220, 90%, 56%));
+    color: var(--color-secondary-lighter);
     text-decoration: underline;
   }
 
