--- a/src/assets/scss/custom-style/_buttons.scss
+++ b/src/assets/scss/custom-style/_buttons.scss
@@ -48,7 +48,7 @@
 .btn--subtle {
   background: var(--color-bg-lighter);
   color: var(--color-secondary-darker);
-  border: 1px solid var(--color-contrast-lower);
+  border: 2px solid var(--color-primary);
   font-family: var(--font-secondary);
 
   &:hover {
