--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -35,3 +35,4 @@
 @import "components/1_revealing-section";
 @import "components/1_sticky-hero";
 @import "components/1_banner";
+@import "components/1_stories";
