--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -30,7 +30,7 @@
   }
 
   body {
-    background-color: var(--color-bg, white);
+    background-color: var(--color-quaternary-light);
   }
 
   article, aside, details, figcaption, figure, 
