blog sort date + sidebar + tldr

--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -36,3 +36,5 @@
 @import "components/1_sticky-hero";
 @import "components/1_banner";
 @import "components/1_stories";
+@import "components/2_alert-message";
+@import "components/1_tldr";
