modal in progress

--- a/src/assets/scss/components/_1_stories.scss
+++ b/src/assets/scss/components/_1_stories.scss
@@ -11,7 +11,7 @@ Usage: codyhouse.co/license
 
 .stories {
   position: sticky;
-  top: var(--space-lg);
+  top: 96px;
   background-color: alpha(var(--color-contrast-lower), 0.3);
   padding: var(--component-padding);
   border-radius: var(--radius-lg);
