proizvodi layout, cta proizvod, blog tag, kontakt

--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -38,3 +38,5 @@
 @import "components/1_stories";
 @import "components/2_alert-message";
 @import "components/1_tldr";
+@import "components/1_user-cell";
+@import "components/1_details-list-v2";
