--- a/src/assets/scss/_custom-style.scss
+++ b/src/assets/scss/_custom-style.scss
@@ -199,3 +199,42 @@ html:not(.js) .select .icon {
 .margin-left-important {
   margin: 0 12px 0 0 !important;
 }
+
+/* Example color classes */
+.tag1 {
+	background-color: rgb(255, 201, 201);
+}
+
+.tag2 {
+	background-color: rgb(255, 240, 175);
+}
+
+.tag3 {
+	background-color: rgb(183, 240, 212);
+}
+
+.tag4 {
+	background-color: rgb(198, 255, 254);
+}
+
+.tag5 {
+	background-color: rgb(193, 193, 255);
+}
+
+.tag6 {
+	background-color: rgb(245, 205, 255);
+}
+
+.tag7 {
+	background-color: rgb(255, 210, 234);
+}
+
+.tag8 {
+	background-color: rgb(255, 207, 227);
+}
+
+.tag9 {
+	background-color: rgb(227, 227, 227);
+}
+
+/* Add more color classes as needed */
