dorada velikih izmena

--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -40,3 +40,4 @@
 @import "components/1_tldr";
 @import "components/1_user-cell";
 @import "components/1_details-list-v2";
+@import "components/1_badge";
