blog link fix + proizvodi poboljsanje

--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -41,3 +41,4 @@
 @import "components/1_user-cell";
 @import "components/1_details-list-v2";
 @import "components/1_badge";
+@import "components/1_sticky-banner";
