nov homepage i jpegminifer

--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -42,3 +42,4 @@
 @import "components/1_details-list-v2";
 @import "components/1_badge";
 @import "components/1_sticky-banner";
+@import "components/2_tabbed-features-v2";
