--- a/src/assets/scss/custom-style/_typography.scss
+++ b/src/assets/scss/custom-style/_typography.scss
@@ -1,111 +1,73 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&family=Ysabeau+Office:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&family=Ysabeau+Infant:wght@400;600&display=swap');
 
 :root {
-	// font family
-	--font-primary: "Ysabeau Office", sans-serif;
-	--font-secondary: "IBM Plex Sans", sans-serif;
+  // font family
+  --font-primary: 'Ysabeau Infant', sans-serif;
+  --font-secondary: 'IBM Plex Sans', sans-serif;
 
-	// font size
-	--text-base-size: 1em; // body font-size
-	--text-scale-ratio: 1.2; // multiplier used to generate the type scale values 👇
+  // font size
+  --text-base-size: 1em; // body font-size
+  --text-scale-ratio: 1.2; // multiplier used to generate the type scale values 👇
+  
+  // line-height
+  --body-line-height: 1.4;
+  --heading-line-height: 1.1;
+  
+  // capital letters - used in combo with the lhCrop mixin
+  --font-primary-capital-letter: 1;
+  --font-secondary-capital-letter: 1;
 
-	// line-height
-	--body-line-height: 1.4;
-	--heading-line-height: 1.2;
-
-	// capital letters - used in combo with the lhCrop mixin
-	--font-primary-capital-letter: 1;
-	--font-secondary-capital-letter: 1;
-
-	// unit - don't modify unless you want to change the typography unit (e.g., from Rem to Em units)
-	--text-unit: 1em; // if Em units → --text-unit: 1em;
+  // unit - don't modify unless you want to change the typography unit (e.g., from Rem to Em units)
+  --text-unit: 1em; // if Em units → --text-unit: 1em;
 }
 
-:root,
-* {
-	// type scale
-	--text-xs: calc((var(--text-unit) / var(--text-scale-ratio)) / var(--text-scale-ratio));
-	--text-sm: calc(var(--text-xs) * var(--text-scale-ratio));
-	--text-md: calc(var(--text-sm) * var(--text-scale-ratio) * var(--text-scale-ratio));
-	--text-lg: calc(var(--text-md) * var(--text-scale-ratio));
-	--text-xl: calc(var(--text-lg) * var(--text-scale-ratio));
-	--text-xxl: calc(var(--text-xl) * var(--text-scale-ratio));
-	--text-xxxl: calc(var(--text-xxl) * var(--text-scale-ratio));
-	--text-xxxxl: calc(var(--text-xxxl) * var(--text-scale-ratio));
+:root, * {
+  // type scale
+  --text-xs: calc((var(--text-unit) / var(--text-scale-ratio)) / var(--text-scale-ratio));
+  --text-sm: calc(var(--text-xs) * var(--text-scale-ratio));
+  --text-md: calc(var(--text-sm) * var(--text-scale-ratio) * var(--text-scale-ratio));
+  --text-lg: calc(var(--text-md) * var(--text-scale-ratio));
+  --text-xl: calc(var(--text-lg) * var(--text-scale-ratio));
+  --text-xxl: calc(var(--text-xl) * var(--text-scale-ratio));
+  --text-xxxl: calc(var(--text-xxl) * var(--text-scale-ratio));
+  --text-xxxxl: calc(var(--text-xxxl) * var(--text-scale-ratio));
 }
+
 
 @include breakpoint(md) {
-	:root {
-		--text-base-size: 1.25em;
-		--text-scale-ratio: 1.25;
-	}
+  :root {
+    --text-base-size: 1.25em;
+    --text-scale-ratio: 1.25;
+  }
 }
 
 body {
-	font-family: var(--font-secondary);
-	color: var(--color-contrast-medium);
-	--body-font-weight: 400;
+  font-family: var(--font-secondary);
+  --body-font-weight: 400;
 }
 
-h1,
-h2,
-h3,
-h4 {
-	font-family: var(--font-primary);
-	--heading-font-weight: 600;
+h1, h2, h3, h4 {
+  font-family: var(--font-primary);
+  --heading-font-weight: 600;
 }
 
 // font family
-.font-primary {
-	font-family: var(--font-primary);
-}
-.font-secondary {
-	font-family: var(--font-secondary);
-}
+.font-primary { font-family: var(--font-primary); }
+.font-secondary { font-family: var(--font-secondary); }
 
 // color
-.color-secondary-darker {
-	color: alpha(var(--color-secondary-darker), var(--color-o, 1));
-}
-.color-secondary-dark {
-	color: alpha(var(--color-secondary-dark), var(--color-o, 1));
-}
-.color-secondary {
-	color: alpha(var(--color-secondary), var(--color-o, 1));
-}
-.color-secondary-light {
-	color: alpha(var(--color-secondary-light), var(--color-o, 1));
-}
-.color-secondary-lighter {
-	color: alpha(var(--color-secondary-lighter), var(--color-o, 1));
-}
-.color-tertiary-darker {
-	color: alpha(var(--color-tertiary-darker), var(--color-o, 1));
-}
-.color-tertiary-dark {
-	color: alpha(var(--color-tertiary-dark), var(--color-o, 1));
-}
-.color-tertiary {
-	color: alpha(var(--color-tertiary), var(--color-o, 1));
-}
-.color-tertiary-light {
-	color: alpha(var(--color-tertiary-light), var(--color-o, 1));
-}
-.color-tertiary-lighter {
-	color: alpha(var(--color-tertiary-lighter), var(--color-o, 1));
-}
-.color-quaternary-darker {
-	color: alpha(var(--color-quaternary-darker), var(--color-o, 1));
-}
-.color-quaternary-dark {
-	color: alpha(var(--color-quaternary-dark), var(--color-o, 1));
-}
-.color-quaternary {
-	color: alpha(var(--color-quaternary), var(--color-o, 1));
-}
-.color-quaternary-light {
-	color: alpha(var(--color-quaternary-light), var(--color-o, 1));
-}
-.color-quaternary-lighter {
-	color: alpha(var(--color-quaternary-lighter), var(--color-o, 1));
-}
+.color-secondary-darker { color: alpha(var(--color-secondary-darker), var(--color-o, 1)); }
+.color-secondary-dark { color: alpha(var(--color-secondary-dark), var(--color-o, 1)); }
+.color-secondary { color: alpha(var(--color-secondary), var(--color-o, 1)); }
+.color-secondary-light { color: alpha(var(--color-secondary-light), var(--color-o, 1)); }
+.color-secondary-lighter { color: alpha(var(--color-secondary-lighter), var(--color-o, 1)); }
+.color-tertiary-darker { color: alpha(var(--color-tertiary-darker), var(--color-o, 1)); }
+.color-tertiary-dark { color: alpha(var(--color-tertiary-dark), var(--color-o, 1)); }
+.color-tertiary { color: alpha(var(--color-tertiary), var(--color-o, 1)); }
+.color-tertiary-light { color: alpha(var(--color-tertiary-light), var(--color-o, 1)); }
+.color-tertiary-lighter { color: alpha(var(--color-tertiary-lighter), var(--color-o, 1)); }
+.color-quaternary-darker { color: alpha(var(--color-quaternary-darker), var(--color-o, 1)); }
+.color-quaternary-dark { color: alpha(var(--color-quaternary-dark), var(--color-o, 1)); }
+.color-quaternary { color: alpha(var(--color-quaternary), var(--color-o, 1)); }
+.color-quaternary-light { color: alpha(var(--color-quaternary-light), var(--color-o, 1)); }
+.color-quaternary-lighter { color: alpha(var(--color-quaternary-lighter), var(--color-o, 1)); }
